--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,11 +1,10 @@
 $color_primario: #296871;
 $color_secundario: #828387;
 $color_terciario: #0e7d87;
+$blanco: #ffffff;
 $negro: #25252e;
 $footer: #e5e5e5;
 $parrafo: normal;
-// $parrafo: participante;
-// $parrafo: voluntario;
 $regular_size_text: 14;
 $terminos: 2;
 
