--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,20 @@ h1, h2, h3, h5, .marca, .showTerminos {
   font-family: 'Lato', sans-serif;
   color: #296871; }
 
+.testimonio {
+  font-family: 'Lato', sans-serif; }
+  .testimonio h5 {
+    background-color: #25252e;
+    color: #ffffff;
+    display: inline-flex; }
+  .testimonio p {
+    font-weight: bold;
+    color: #ffffff; }
+
+@media (max-width: 992px) {
+  h5, .testimonio {
+    font-size: 7px; } }
+
 p {
   color: #25252e; }
 
@@ -23,7 +37,9 @@ header {
   margin-bottom: auto; }
 
 main {
-  padding: 40px; }
+  padding: 40px;
+  display: flex;
+  flex-wrap: wrap; }
 
 .icon_index {
   padding: 0.750rem 0rem 0.325rem 1rem; }
@@ -31,6 +47,11 @@ main {
 .card-body {
   flex: 1 1 auto;
   padding: 1rem 0.375rem; }
+
+.navbar-brand {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 .btn {
   display: inline-block;
@@ -71,3 +92,35 @@ ul li a:hover {
 .foto_principal {
   flex: 0 0 auto;
   width: 100%; }
+
+footer {
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  display: block;
+  align-self: flex-end; }
+  footer div.social-media-links {
+    background: #0e7d87;
+    overflow: hidden;
+    padding-bottom: 4px;
+    text-align: center; }
+    footer div.social-media-links ul {
+      margin: 0;
+      padding: 10px; }
+    footer div.social-media-links li {
+      display: inline;
+      padding: 20px;
+      margin: 0;
+      padding: 0; }
+    footer div.social-media-links a {
+      padding: 8px;
+      border-radius: 4px;
+      box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0), 0 2px 3px rgba(0, 0, 0, 0);
+      display: inline-block;
+      position: relative;
+      transition: .2s ease-in; }
+    footer div.social-media-links a:hover {
+      transform: translateY(-4px); }
+    footer div.social-media-links img {
+      width: 25px; }
