--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -11,6 +11,8 @@ header{
 
 main{
     padding: 40px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .icon_index{
@@ -20,4 +22,10 @@ main{
 .card-body {
     flex: 1 1 auto;
     padding: 1rem 0.375rem;
+}
+
+.navbar-brand{
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
