--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -17,3 +17,42 @@ ul li a:hover{
     flex: 0 0 auto;
     width: 100%;
 }
+
+footer{
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    display: block;
+    align-self: flex-end;
+    div.social-media-links{
+        background: $color_terciario;
+        overflow: hidden;
+        padding-bottom: 4px;
+        text-align: center;
+        ul{
+            margin: 0;
+            padding: 10px;
+        }
+        li{
+            display: inline;
+            padding: 20px;
+            margin: 0;
+            padding: 0;
+        }
+        a{
+            padding: 8px;
+            border-radius: 4px;
+            box-shadow: inset 0 -2px 0 0 rgba(0,0,0,0), 0 2px 3px rgba(0,0,0,0);
+            display: inline-block;
+            position: relative;
+            transition: .2s ease-in;
+        }
+        a:hover{
+			transform: translateY(-4px);
+        }
+          img{
+              width: 25px;
+          }
+      }
+  }
