--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -10,9 +10,10 @@ header{
 }
 
 main{
-    padding: 40px;
     display: flex;
     flex-wrap: wrap;
+    margin: 10px;
+    padding-top: 30px;
 }
 
 .icon_index{
