--- a/scss/_tipografia.scss
+++ b/scss/_tipografia.scss
@@ -14,18 +14,38 @@ h1, h2, h3, h5, .marca, .showTerminos{
         color: $blanco;
         display: inline-flex;
     }
+    h3{
+        font-size: 40px;
+    }
     p{
         font-weight: bold;
         color: $blanco;
     }
-}
-
-@media (max-width: 992px) {
-    h5, .testimonio{
-        font-size: 7px;
+    .textSection{
+        display: block;
+        font-size: 30px;
+        color: #959595;
+        margin-bottom: 15px;
     }
 }
 
+@media only screen and (min-width: 269px) and (max-width: 991px){
+    .testimonio{
+        h5{
+            font-size: 16px;
+        }
+        
+        h3{
+            font-size: 16px;
+        }
+        .textSection{
+            font-size: 15px;
+            color: #959595;
+            margin-bottom: 15px;
+        }
+
+    }
+}
 
 p{
     @if $parrafo == normal {
