--- a/css/estilos.css
+++ b/css/estilos.css
@@ -67,6 +67,16 @@ main {
   justify-content: center;
   align-items: center; }
 
+.flexbox-container {
+  display: -ms-flex;
+  display: -webkit-flex;
+  display: flex;
+  width: 100%; }
+
+.flexbox-container > div {
+  width: 50%;
+  padding: 15px; }
+
 .btn {
   display: inline-block;
   font-weight: 400;
@@ -127,6 +137,17 @@ ul li a:hover {
     width: 70%;
     box-shadow: 0 0 40px 5px #000000c0; } }
 
+.funcionamientoPhoto {
+  position: relative;
+  display: flex;
+  background-position: center;
+  vertical-align: middle;
+  margin-left: auto;
+  margin-right: auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 60%; }
+
 footer {
   bottom: 0;
   left: 0;
@@ -135,7 +156,7 @@ footer {
   display: block;
   align-self: flex-end; }
   footer div.social-media-links {
-    background: #0e7d87;
+    background: #e5e5e5;
     overflow: hidden;
     padding-bottom: 4px;
     text-align: center; }
