--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -30,3 +30,15 @@ main{
     justify-content: center;
     align-items: center;
 }
+
+.flexbox-container {
+    display: -ms-flex;
+    display: -webkit-flex;
+    display: flex;
+    width: 100%;
+}
+
+.flexbox-container > div {
+    width: 50%;
+    padding: 15px;
+}
