--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -41,6 +41,18 @@ ul li a:hover{
     }
 }
 
+.funcionamientoPhoto{
+    position: relative;
+    display: flex;
+    background-position: center;
+    vertical-align: middle;
+    margin-left: auto;
+    margin-right: auto;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 60%;
+}
+
 footer{
     bottom: 0;
     left: 0;
@@ -49,7 +61,7 @@ footer{
     display: block;
     align-self: flex-end;
     div.social-media-links{
-        background: $color_terciario;
+        background: $footer;
         overflow: hidden;
         padding-bottom: 4px;
         text-align: center;
@@ -74,8 +86,8 @@ footer{
         a:hover{
 			transform: translateY(-4px);
         }
-          img{
-              width: 25px;
-          }
-      }
-  }
+        img{
+          width: 25px;
+        }
+    }
+}
