--- a/css/estilos.css
+++ b/css/estilos.css
@@ -126,6 +126,12 @@ ul li a:hover {
   width: 60%;
   box-shadow: 0 0 20px 5px #000000c0; }
 
+#carouselTestimonios {
+  height: fit-content; }
+  @media (max-width: 991px) {
+    #carouselTestimonios {
+      display: none; } }
+
 @media only screen and (min-width: 269px) and (max-width: 991px) {
   .foto_testimonios {
     background-image: url(../images/icecream_cel.jpg);
@@ -148,24 +154,41 @@ ul li a:hover {
   background-repeat: no-repeat;
   width: 60%; }
 
+.carousel-inner {
+  height: 80vh !important; }
+  .carousel-inner .carousel-item {
+    height: 80vh !important;
+    background-repeat: no-repeat;
+    background-size: cover; }
+  .carousel-inner .carousel-item:nth-child(1) {
+    background-image: url("../images/image3.jpg"); }
+  .carousel-inner .carousel-item:nth-child(2) {
+    background-image: url("../images/image5.jpg"); }
+  .carousel-inner .carousel-item:nth-child(3) {
+    background-image: url("../images/image6.jpg"); }
+  .carousel-inner .carousel-item:nth-child(4) {
+    background-image: url("../images/image7.jpg"); }
+
+.testimonios-mobil {
+  display: none; }
+  @media (max-width: 991px) {
+    .testimonios-mobil {
+      display: block; } }
+
 footer {
-  bottom: 0;
-  left: 0;
-  right: 0;
   width: 100%;
-  display: block;
-  align-self: flex-end; }
+  height: 100px;
+  background: #e5e5e5; }
   footer div.social-media-links {
-    background: #e5e5e5;
+    height: 100%;
     overflow: hidden;
-    padding-bottom: 4px;
-    text-align: center; }
+    display: flex;
+    justify-content: center;
+    align-items: center; }
     footer div.social-media-links ul {
-      margin: 0;
-      padding: 10px; }
+      margin: 0; }
     footer div.social-media-links li {
       display: inline;
-      padding: 20px;
       margin: 0;
       padding: 0; }
     footer div.social-media-links a {
@@ -175,7 +198,7 @@ footer {
       display: inline-block;
       position: relative;
       transition: .2s ease-in; }
+      footer div.social-media-links a img {
+        width: 25px; }
     footer div.social-media-links a:hover {
       transform: translateY(-4px); }
-    footer div.social-media-links img {
-      width: 25px; }
