--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -28,6 +28,17 @@ ul li a:hover{
     box-shadow: 0 0 20px 5px #000000c0;
 }
 
+#carouselTestimonios {
+    height: fit-content;
+    @media (max-width: 991px) {
+        display: none;
+    }    
+}
+
+.testimonio {
+
+}
+
 @media only screen and (min-width: 269px) and (max-width: 991px){
     .foto_testimonios {
         background-image: url(../images/icecream_cel.jpg);
@@ -53,25 +64,49 @@ ul li a:hover{
     width: 60%;
 }
 
+.carousel-inner {
+    height: 80vh !important;
+    .carousel-item {
+        height: 80vh !important;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .carousel-item:nth-child(1) {
+        background-image: url('../images/image3.jpg');
+    }
+    .carousel-item:nth-child(2) {
+        background-image: url('../images/image5.jpg');
+    }
+    .carousel-item:nth-child(3) {
+        background-image: url('../images/image6.jpg');
+    }
+    .carousel-item:nth-child(4) {
+        background-image: url('../images/image7.jpg');
+    }
+}
+
+.testimonios-mobil {
+    display: none;
+    @media (max-width: 991px) {
+        display: block;
+    }
+}
+
 footer{
-    bottom: 0;
-    left: 0;
-    right: 0;
     width: 100%;
-    display: block;
-    align-self: flex-end;
+    height: 100px;
+    background: $footer;
     div.social-media-links{
-        background: $footer;
+        height: 100%;
         overflow: hidden;
-        padding-bottom: 4px;
-        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         ul{
             margin: 0;
-            padding: 10px;
         }
         li{
             display: inline;
-            padding: 20px;
             margin: 0;
             padding: 0;
         }
@@ -82,12 +117,12 @@ footer{
             display: inline-block;
             position: relative;
             transition: .2s ease-in;
+            img{
+              width: 25px;
+            }
         }
         a:hover{
 			transform: translateY(-4px);
-        }
-        img{
-          width: 25px;
         }
     }
 }
